# occt-wasm

./: CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  package-lock.json  package.json  playwright.config.ts
.github/: dependabot.yml
.github/workflows/: build-wasi.yml  build-wasm.yml  ci.yml  osv-scan.yml  publish.yml  release.yml
crate/: Cargo.toml  README.md
crate/src/: kernel_generated.rs  lib.rs
crate/tests/: integration.rs
examples/node-cli/: measure-and-cells.mjs  multiview-svg.mjs
facade/include/: occt_kernel.h
facade/src/: kernel.cpp
scripts/: bench-check.js
test/: api-coverage.test.ts  bench.test.ts  facade-cad-features.test.ts  facade-features-2.test.ts  new-features.test.ts  raw-access.test.ts  svg.test.ts
test/browser/: smoke.spec.ts
ts/: package-lock.json  package.json
ts/src/: index.ts  raw-types.ts  svg.ts  types.ts  worker.ts  xcaf-document.ts
xtask/: Cargo.toml
xtask/src/codegen/: config.rs  emitter.rs  run.rs  rust_emitter.rs  types.rs  wasi_emitter.rs
